dial9-trace-format-derive/src/snapshots/dial9_trace_format_derive__tests__all_field_types.snap
---
source: dial9-trace-format-derive/src/lib.rs
expression: "expand_to_string(quote!\n{\n    struct AllFieldTypes\n    {\n        #[traceevent(timestamp)] timestamp_ns: u64, a_u8: u8, b_u16: u16,\n        c_u32: u32, d_u64: u64, e_i64: i64, f_f64: f64, g_bool: bool,\n        h_string: String, i_bytes: Vec<u8>, j_interned: InternedString,\n        k_frames: StackFrames, l_map: Vec<(String, String)>,\n    }\n})"
---
#[allow(non_camel_case_types, non_snake_case)]
impl ::dial9_trace_format::TraceEvent for AllFieldTypes {
    fn event_name() -> &'static str {
        "AllFieldTypes"
    }
    fn field_defs() -> Vec<::dial9_trace_format::schema::FieldDef> {
        vec![
            ::dial9_trace_format::schema::FieldDef::new("a_u8", < u8 as
            ::dial9_trace_format::TraceField > ::field_type(),),
            ::dial9_trace_format::schema::FieldDef::new("b_u16", < u16 as
            ::dial9_trace_format::TraceField > ::field_type(),),
            ::dial9_trace_format::schema::FieldDef::new("c_u32", < u32 as
            ::dial9_trace_format::TraceField > ::field_type(),),
            ::dial9_trace_format::schema::FieldDef::new("d_u64", < u64 as
            ::dial9_trace_format::TraceField > ::field_type(),),
            ::dial9_trace_format::schema::FieldDef::new("e_i64", < i64 as
            ::dial9_trace_format::TraceField > ::field_type(),),
            ::dial9_trace_format::schema::FieldDef::new("f_f64", < f64 as
            ::dial9_trace_format::TraceField > ::field_type(),),
            ::dial9_trace_format::schema::FieldDef::new("g_bool", < bool as
            ::dial9_trace_format::TraceField > ::field_type(),),
            ::dial9_trace_format::schema::FieldDef::new("h_string", < String as
            ::dial9_trace_format::TraceField > ::field_type(),),
            ::dial9_trace_format::schema::FieldDef::new("i_bytes", < Vec < u8 > as
            ::dial9_trace_format::TraceField > ::field_type(),),
            ::dial9_trace_format::schema::FieldDef::new("j_interned", < InternedString as
            ::dial9_trace_format::TraceField > ::field_type(),),
            ::dial9_trace_format::schema::FieldDef::new("k_frames", < StackFrames as
            ::dial9_trace_format::TraceField > ::field_type(),),
            ::dial9_trace_format::schema::FieldDef::new("l_map", < Vec < (String, String)
            > as ::dial9_trace_format::TraceField > ::field_type(),)
        ]
    }
    fn timestamp(&self) -> u64 {
        self.timestamp_ns
    }
    fn encode_fields<W: ::std::io::Write>(
        &self,
        enc: &mut ::dial9_trace_format::EventEncoder<'_, W>,
    ) -> ::std::io::Result<()> {
        <u8 as ::dial9_trace_format::TraceField>::encode(&self.a_u8, enc)?;
        <u16 as ::dial9_trace_format::TraceField>::encode(&self.b_u16, enc)?;
        <u32 as ::dial9_trace_format::TraceField>::encode(&self.c_u32, enc)?;
        <u64 as ::dial9_trace_format::TraceField>::encode(&self.d_u64, enc)?;
        <i64 as ::dial9_trace_format::TraceField>::encode(&self.e_i64, enc)?;
        <f64 as ::dial9_trace_format::TraceField>::encode(&self.f_f64, enc)?;
        <bool as ::dial9_trace_format::TraceField>::encode(&self.g_bool, enc)?;
        <String as ::dial9_trace_format::TraceField>::encode(&self.h_string, enc)?;
        <Vec<u8> as ::dial9_trace_format::TraceField>::encode(&self.i_bytes, enc)?;
        <InternedString as ::dial9_trace_format::TraceField>::encode(
            &self.j_interned,
            enc,
        )?;
        <StackFrames as ::dial9_trace_format::TraceField>::encode(&self.k_frames, enc)?;
        <Vec<
            (String, String),
        > as ::dial9_trace_format::TraceField>::encode(&self.l_map, enc)?;
        Ok(())
    }
}
