dial9-trace-format-derive/src/snapshots/dial9_trace_format_derive__tests__borrowed_str_event.snap
---
source: dial9-trace-format-derive/src/lib.rs
expression: "expand_to_string(quote!\n{\n    struct BorrowedStr<'a>\n    { #[traceevent(timestamp)] timestamp_ns: u64, path: &'a str, }\n})"
---
impl<'a> ::dial9_trace_format::TraceEvent for BorrowedStr<'a> {
    fn event_name() -> &'static str {
        "BorrowedStr"
    }
    fn field_defs() -> Vec<::dial9_trace_format::schema::FieldDef> {
        vec![
            ::dial9_trace_format::schema::FieldDef::new("path", < & 'a str as
            ::dial9_trace_format::TraceField > ::field_type(),)
        ]
    }
    fn timestamp(&self) -> u64 {
        self.timestamp_ns
    }
    fn encode_fields<W: ::std::io::Write>(
        &self,
        enc: &mut ::dial9_trace_format::EventEncoder<'_, W>,
    ) -> ::std::io::Result<()> {
        <&'a str as ::dial9_trace_format::TraceField>::encode(&self.path, enc)?;
        Ok(())
    }
}
