dial9-trace-format-derive/src/snapshots/dial9_trace_format_derive__tests__doc_comments_copied_to_ref_fields.snap
---
source: dial9-trace-format-derive/src/lib.rs
expression: "expand_to_string(quote!\n{\n    #[doc = r\" Root documentation\"] struct DocEvent\n    {\n        #[traceevent(timestamp)] #[doc = r\" Event timestamp in nanoseconds.\"]\n        timestamp_ns: u64, #[doc = r\" The worker thread ID.\"] worker_id: u64,\n        #[doc = r\" Number of items in the local queue.\"] local_queue: u8,\n    }\n})"
---
#[allow(non_camel_case_types, non_snake_case)]
impl ::dial9_trace_format::TraceEvent for DocEvent {
    fn event_name() -> &'static str {
        "DocEvent"
    }
    fn field_defs() -> Vec<::dial9_trace_format::schema::FieldDef> {
        vec![
            ::dial9_trace_format::schema::FieldDef::new("worker_id", < u64 as
            ::dial9_trace_format::TraceField > ::field_type(),),
            ::dial9_trace_format::schema::FieldDef::new("local_queue", < u8 as
            ::dial9_trace_format::TraceField > ::field_type(),)
        ]
    }
    fn timestamp(&self) -> u64 {
        self.timestamp_ns
    }
    fn encode_fields<W: ::std::io::Write>(
        &self,
        enc: &mut ::dial9_trace_format::EventEncoder<'_, W>,
    ) -> ::std::io::Result<()> {
        <u64 as ::dial9_trace_format::TraceField>::encode(&self.worker_id, enc)?;
        <u8 as ::dial9_trace_format::TraceField>::encode(&self.local_queue, enc)?;
        Ok(())
    }
}
