dial9-trace-format-derive/src/snapshots/dial9_trace_format_derive__tests__empty_event.snap
---
source: dial9-trace-format-derive/src/lib.rs
expression: "expand_to_string(quote!\n{ struct EmptyEvent { #[traceevent(timestamp)] timestamp_ns: u64, } })"
---
#[allow(non_camel_case_types, non_snake_case)]
impl ::dial9_trace_format::TraceEvent for EmptyEvent {
    fn event_name() -> &'static str {
        "EmptyEvent"
    }
    fn field_defs() -> Vec<::dial9_trace_format::schema::FieldDef> {
        vec![]
    }
    fn timestamp(&self) -> u64 {
        self.timestamp_ns
    }
    fn encode_fields<W: ::std::io::Write>(
        &self,
        enc: &mut ::dial9_trace_format::EventEncoder<'_, W>,
    ) -> ::std::io::Result<()> {
        Ok(())
    }
}
