dial9-trace-format-derive/src/snapshots/dial9_trace_format_derive__tests__generic_event.snap
---
source: dial9-trace-format-derive/src/lib.rs
expression: "expand_to_string(quote!\n{\n    #[traceevent(name = concat!(\"SpanEnter:\", file!(), \":\", line!()))] struct\n    GenericEvent<'a, T: TraceField + Clone + 'static>\n    { #[traceevent(timestamp)] timestamp_ns: u64, name: &'a str, value: T, }\n})"
---
#[allow(non_camel_case_types, non_snake_case)]
impl<'a, T: TraceField + Clone + 'static> ::dial9_trace_format::TraceEvent
for GenericEvent<'a, T> {
    fn event_name() -> &'static str {
        concat!("SpanEnter:", file!(), ":", line!())
    }
    fn field_defs() -> Vec<::dial9_trace_format::schema::FieldDef> {
        vec![
            ::dial9_trace_format::schema::FieldDef::new("name", < & 'a str as
            ::dial9_trace_format::TraceField > ::field_type(),),
            ::dial9_trace_format::schema::FieldDef::new("value", < T as
            ::dial9_trace_format::TraceField > ::field_type(),)
        ]
    }
    fn timestamp(&self) -> u64 {
        self.timestamp_ns
    }
    fn encode_fields<W: ::std::io::Write>(
        &self,
        enc: &mut ::dial9_trace_format::EventEncoder<'_, W>,
    ) -> ::std::io::Result<()> {
        <&'a str as ::dial9_trace_format::TraceField>::encode(&self.name, enc)?;
        <T as ::dial9_trace_format::TraceField>::encode(&self.value, enc)?;
        Ok(())
    }
}
