dial9-trace-format-derive/src/snapshots/dial9_trace_format_derive__tests__role_attribute.snap
---
source: dial9-trace-format-derive/src/lib.rs
expression: "expand_to_string(quote!\n{\n    struct SpanEnter\n    {\n        #[traceevent(timestamp)] timestamp_ns: u64,\n        #[traceevent(role = \"span.name\")] span_name: InternedString,\n        #[traceevent(unit = \"ns\")] active_ns: u64,\n    }\n})"
---
impl ::dial9_trace_format::TraceEvent for SpanEnter {
    fn event_name() -> &'static str {
        "SpanEnter"
    }
    fn field_defs() -> Vec<::dial9_trace_format::schema::FieldDef> {
        vec![
            ::dial9_trace_format::schema::FieldDef::new("span_name", < InternedString as
            ::dial9_trace_format::TraceField > ::field_type(),),
            ::dial9_trace_format::schema::FieldDef::new("active_ns", < u64 as
            ::dial9_trace_format::TraceField > ::field_type(),)
        ]
    }
    fn schema_entry() -> ::dial9_trace_format::schema::SchemaEntry {
        ::dial9_trace_format::schema::SchemaEntry::with_annotations(
            Self::event_name(),
            Self::field_defs(),
            vec![
                ::dial9_trace_format::schema::FieldAnnotation::new(0u16, "dial9.role",
                "span.name",), ::dial9_trace_format::schema::FieldAnnotation::new(1u16,
                "unit", "ns")
            ],
        )
    }
    fn timestamp(&self) -> u64 {
        self.timestamp_ns
    }
    fn encode_fields<W: ::std::io::Write>(
        &self,
        enc: &mut ::dial9_trace_format::EventEncoder<'_, W>,
    ) -> ::std::io::Result<()> {
        <InternedString as ::dial9_trace_format::TraceField>::encode(
            &self.span_name,
            enc,
        )?;
        <u64 as ::dial9_trace_format::TraceField>::encode(&self.active_ns, enc)?;
        Ok(())
    }
}
